add page footer, add PIE_Example

--- a/SectionB-Counting.tex
+++ b/SectionB-Counting.tex
@@ -11,6 +11,7 @@
 \usepackage{markdown}
 %\usepackage{china2e} 
 \usepackage[utf8]{inputenc}
+\usepackage[colorlinks,linkcolor=blue]{hyperref}
 \begin{document}
 \fi
 
@@ -53,6 +54,13 @@ $\therefore$ $|\cup_{i=1}^{k} A_{i}| = \sum_{t=1}^{k} (-1)^{t+1} \omega(t)$\\$\i
 in a universe with n elements, $A_{1}, A_{2}, \dots , A_{n}$ are finite sets\\$\indent$
 $\omega(t) = \sum_{i_{1},i_{2},\dots,i_{t}}|A_{i_{1}} \cap A_{i_{2}} \cap \dots \cap A_{i_{t}}|$\\$\indent$
 $E(m)$ = the number of elements appearing in exactly $m$ of $A_{1} \sim A_{n}$ = $\sum_{k=m}^{n} (-1)^{k-m} \binom{k}{m} \omega(k)$
+
+An example are as follows:  \href{https://www.youtube.com/watch?v=D1T3xy_vtxU}{vid}
+
+\begin{center}
+\includegraphics[scale=0.3]{PIE_Example.png}
+\end{center}
+
 \section{方法}
 Principle of Addition (Case work principle)\\$\indent$
 Principle of Multiplication\\$\indent$
